--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Color the Shelters</title>
 	<link type="text/css" rel="stylesheet" href="normalize.css"/>
+	<link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -10,25 +11,28 @@
 		<div class="logo">COLOR THE SHELTERS</div>
 		<nav>
 			<ul>
-				<li><a href="#" class="red">Home</a></li>
-				<li><a href="#" class="orange">About</a></li>
-				<li><a href="#" class="green">Section</a></li>
-				<li><a href="#" class="blue">Section</a></li>
-				<li><a href="#" class="violet">Section</a></li>
+				<li><a href="#" class="ared">Home</a></li>
+				<li><a href="#" class="aorange">About</a></li>
+				<li><a href="#" class="agreen">Section</a></li>
+				<li><a href="#" class="ablue">Section</a></li>
+				<li><a href="#" class="aviolet">Section</a></li>
 			</ul>
 		</nav>
 
-		<h1>Welcome</h1>
-		<p>
-			There can be no thought of finishing for aiming for the stars. Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.
-			<br>
-			I believe every human has a finite number of heartbeats. I don't intend to waste any of mine
-			<br>
-			The sky is the limit only for those who aren't afraid to fly!
-			<br>
-			That's one small step for [a] man, one giant leap for mankind.
-			<br>
-			Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.
+		<div class="content">
+			<h1 class="red">Welcome</h1>
+			<p>
+				There can be no thought of finishing for aiming for the stars. Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.
+				<br><br>
+				I believe every human has a finite number of heartbeats. I don't intend to waste any of mine
+				<br><br>
+				The sky is the limit only for those who aren't afraid to fly!
+				<br><br>
+				That's one small step for [a] man, one giant leap for mankind.
+				<br><br>
+				Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.
+			</p>
+		</div>
 	</div>
 
 	<script type="text/javascript" src="jquery.min.js"></script>
